--- a/ClothBazar.Entities/ClothBazar.Entities.csproj
+++ b/ClothBazar.Entities/ClothBazar.Entities.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Category.cs" />
     <Compile Include="Code\Enums.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderItem.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
