--- a/ClothBazar.Services/ClothBazar.Services.csproj
+++ b/ClothBazar.Services/ClothBazar.Services.csproj
@@ -52,9 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationsService.cs" />
+    <Compile Include="OrdersService.cs" />
     <Compile Include="ProductsService.cs" />
     <Compile Include="CategoriesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShopService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClothBazar.Database\ClothBazar.Database.csproj">
